Fix z-index issue with datepicker

--- a/src/styles/elm-datepicker.css
+++ b/src/styles/elm-datepicker.css
@@ -7,7 +7,7 @@
 }
 
 .elm-datepicker--picker {
-  @apply absolute w-full border-solid border border-purple-500 bg-white z-10 rounded-sm;
+  @apply absolute w-full border-solid border border-purple-500 bg-white z-20 rounded-sm;
 }
 
 .elm-datepicker--picker-header,
